# servant-auth-token-api

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  docs.html  docs.markdown  generate.sh  ghcid.sh  release.nix  servant-auth-token-api.cabal  stack.yaml  swagger-gen.cabal  swagger.json  upload-docs.sh
src/: Main.hs
src/Servant/API/Auth/: Token.hs
src/Servant/API/Auth/Token/: Pagination.hs
src/Servant/API/Auth/Token/Internal/: DeriveJson.hs  Schema.hs
swagger-ui/: index.html
