name:                swagger-gen
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/ncrashed/swagger-gen#readme
license:             BSD3
license-file:        LICENSE
author:              NCrashed
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable auth-token-swagger-gen
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       
      base >= 4.7 && < 5
    , servant-auth-token-api 
    , servant-swagger >= 0.1
    , aeson >= 0.11
    , bytestring >= 0.10
    , lens >= 4
    , swagger2
